Add image title beneath the image

--- a/src/components/carleonMotion/carleonMotion.template.html
+++ b/src/components/carleonMotion/carleonMotion.template.html
@@ -81,6 +81,7 @@
 			<a href="" data-ng-click="$ctrl.openPopupImage(image.title, image.img)" alt="{{image.title}}">
 				<img data-http-src="{{image.thumb}}" title="{{image.title}}" class="img-responsive">
 			</a>
+			<span class="small text-center text-nowrap text-lowercase lead" data-ng-bind="image.title"></span>
 		</div>
 	</div>
 	<!-- stream -->
