Use Angular-nvD3 for monitors

--- a/src/components/modals/monitor.modal.html
+++ b/src/components/modals/monitor.modal.html
@@ -17,12 +17,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<canvas id="line" class="chart chart-line" 
-					data-chart-data="MonitorModalCtrl.data"
-					data-chart-labels="MonitorModalCtrl.labels" 
-					data-chart-series="MonitorModalCtrl.series"
-					data-chart-options="MonitorModalCtrl.options">
-			</canvas> 
+			<data-nvd3 data-options="MonitorModalCtrl.options" data="MonitorModalCtrl.data"></data-nvd3>
 		</div>
     </div>
     <div class="modal-footer">
