--- a/src/components/monitor/monitor.template.html
+++ b/src/components/monitor/monitor.template.html
@@ -1,60 +1,45 @@
-<div class="row control-group">
-	<div class="col-xs-1">
+<div class="container-fluid">
+	<div class="row control-group">
+		<div class="col-xs-5">
+			<label for="monitorSelectDuration" data-translate="monitor_select_duration"></label>
+		</div>
+		<div class="col-xs-5 controls">
+			<select id="monitorSelectDuration"
+					class="form-control"
+					data-ng-model="$ctrl.duration"
+					data-ng-change="$ctrl.displayMonitor()"
+					data-ng-options="duration as $ctrl.tr(duration.label) for duration in $ctrl.durationList track by duration.value">
+			</select>
+		</div>
 	</div>
-	<div class="col-xs-5">
-		<label for="monitorSelectDuration" data-translate="monitor_select_duration"></label>
+	<div class="row control-group">
+		<div class="col-xs-1">
+		</div>
+		<div class="col-xs-2">
+			<label for="monitorNewElement" data-translate="monitor_new_element"></label>
+		</div>
+		<div class="col-xs-3 controls">
+			<select id="monitorNewElement"
+					class="form-control"
+					data-ng-model="$ctrl.newElement"
+					data-ng-options="element.display for element in $ctrl.elementListDisplayed">
+			</select>
+		</div>
+		<div class="col-xs-3 controls">
+			<button type="button" data-ng-click="$ctrl.addElement()" class="btn btn-primary" data-ng-disabled="!$ctrl.newElementValid()" data-translate="monitor_new_element_button"></button>
+		</div>
 	</div>
-	<div class="col-xs-5 controls">
-		<select id="monitorSelectDuration"
-				class="form-control"
-				data-ng-model="$ctrl.duration"
-				data-ng-change="$ctrl.displayMonitor()"
-				data-ng-options="duration as $ctrl.tr(duration.label) for duration in $ctrl.durationList track by duration.value">
-		</select>
+	<div class="row text-center">
+		<div class="col-xs-12">
+			<data-nvd3 data-options="$ctrl.options" data="$ctrl.data"></data-nvd3>
+		</div>
 	</div>
-</div>
-<div class="row control-group">
-	<div class="col-xs-1">
+	<div class="row text-center">
+		<span data-ng-repeat="serie in $ctrl.element.elements" style="margin: 5px; color: white;">
+			<button type="button" class="btn btn-primary" data-ng-click="$ctrl.removeSerie(serie)" data-ng-disabled="$ctrl.element.elements.length <= 1">
+				<i class="fa fa-trash-o" aria-hidden="true"></i>
+				<span data-ng-bind="serie.display"></span>
+			</button>
+		</span>
 	</div>
-	<div class="col-xs-2">
-		<label for="monitorNewElement" data-translate="monitor_new_element"></label>
-	</div>
-	<div class="col-xs-3 controls">
-		<select id="monitorNewElement"
-				class="form-control"
-				data-ng-model="$ctrl.newElement"
-				data-ng-options="element.display for element in $ctrl.elementListDisplayed">
-		</select>
-	</div>
-	<div class="col-xs-3">
-		<select id="monitorNewElementColor"
-				class="form-control"
-				data-ng-model="$ctrl.newElementColor">
-			<option data-ng-repeat="color in $ctrl.colorList" style="background:{{color.value}}" value="{{color.value}}" data-ng-bind="$ctrl.tr(color.label)"></option>
-		</select>
-	</div>
-	<div class="col-xs-3 controls">
-		<button type="button" data-ng-click="$ctrl.addElement()" class="btn btn-primary" data-ng-disabled="!$ctrl.newElementValid()" data-translate="monitor_new_element_button"></button>
-	</div>
-</div>
-<div class="row text-center">
-    <div class="col-xs-12">
-        <canvas id="line" class="chart chart-bar" 
-                data-chart-dataset-override="$ctrl.datasetOverride"
-                data-chart-data="$ctrl.data"
-                data-chart-labels="$ctrl.labels" 
-                data-chart-legend="true" 
-                data-chart-series="$ctrl.series"
-                data-chart-options="$ctrl.options"
-                data-chart-colors="$ctrl.colors">
-        </canvas> 
-    </div>
-</div>
-<div class="row text-center">
-    <span data-ng-repeat="serie in $ctrl.element.elements" style="margin: 5px; color: white;">
-		<button type="button" class="btn" data-ng-click="$ctrl.removeSerie(serie)" style="background-color:{{serie.color}};" data-ng-disabled="$ctrl.element.elements.length <= 1">
-			<span data-ng-bind="serie.display"></span>
-			<i class="fa fa-trash-o" aria-hidden="true"></i>
-		</button>
-    </span>
 </div>
