--- a/src/components/modals/image.modal.html
+++ b/src/components/modals/image.modal.html
@@ -7,7 +7,7 @@
 			<div class="col-xs-1">
 			</div>
 			<div class="col-xs-10">
-				<img data-http-src="{{ImageModalCtrl.src}}" alt="{{ImageModalCtrl.title}}" class="img-responsive img-thumbnail">
+				<img data-ng-src="{{ImageModalCtrl.src}}" alt="{{ImageModalCtrl.title}}" class="img-responsive img-thumbnail">
 			</div>
 			<div class="col-xs-1">
 			</div>
