--- a/src/components/topLeftMenu/topLeftMenu.less
+++ b/src/components/topLeftMenu/topLeftMenu.less
@@ -9,3 +9,9 @@
 	z-index: 200;
 	font-size: 16px;
 }
+
+.top-left-menu > a:active {
+    background-color: #f5f5f5;
+    color: #262626;
+    text-decoration: none;
+}
