Implement users and token management

--- a/src/components/topLeftMenu/topLeftMenu.template.html
+++ b/src/components/topLeftMenu/topLeftMenu.template.html
@@ -58,6 +58,12 @@
             </a>
         </li>
         <li class="row-fluid">
+            <a data-ng-href="#/users">
+                <i class="fa fa-users"></i>
+                <span data-translate="menu_users"></span>
+            </a>
+        </li>
+        <li class="row-fluid">
             <a data-ng-href="#/parameters">
                 <i class="fa fa-cogs"></i>
                 <span data-translate="menu_parameters"></span>
