Add semi-on background on dimmer

--- a/src/components/dimmer/dimmer.less
+++ b/src/components/dimmer/dimmer.less
@@ -36,6 +36,10 @@
 	background-color:yellow;
 }
 
+.quarter-almost-on {
+	background-color:#F5F6CE;
+}
+
 .quarter:active {
 	background-color:red;
 }
