Add clean profile button

--- a/src/app/parameters/parameters.html
+++ b/src/app/parameters/parameters.html
@@ -152,6 +152,9 @@
 						<button type="button" class="btn" data-ng-click="ParametersCtrl.editProfile(profile)">
 							<i class="fa fa-pencil" aria-hidden="true"></i>
 						</button>
+						<button type="button" class="btn" data-ng-click="ParametersCtrl.cleanProfile(profile)">
+							<i class="fa fa-eraser" aria-hidden="true"></i>
+						</button>
 						<button type="button" class="btn" data-ng-click="ParametersCtrl.removeProfile(profile)">
 							<i class="fa fa-trash" aria-hidden="true"></i>
 						</button>
