Add default icon

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -33,7 +33,8 @@
                                             data-element="w"
                                             data-dashboard="true"
                                             data-type="w.type"
-                                            data-sag-params="DashboardCtrl.sagremorParams">
+                                            data-sag-params="DashboardCtrl.sagremorParams"
+                                            data-icon="w.icon">
                             <div data-sag-generic-injector data-type="w.type" data-elt="w.element"></div>
                         </data-sag-container>
                     </div>
