--- a/src/app/events/events.html
+++ b/src/app/events/events.html
@@ -12,7 +12,8 @@
                                 data-size="1"
                                 data-title="scheduler.name"
                                 data-type="'scheduler'"
-                                data-element="scheduler">
+                                data-element="scheduler"
+                                data-icon="'calendar'">
 				<data-sag-scheduler data-element="scheduler"></data-sag-scheduler>
 			</data-sag-container>
         </div>
@@ -25,7 +26,8 @@
                                 data-size="1"
                                 data-title="trigger.name"
                                 data-type="'trigger'"
-                                data-element="trigger">
+                                data-element="trigger"
+                                data-icon="'bell'">
 				<data-sag-trigger data-element="trigger"></data-sag-trigger>
 			</data-sag-container>
         </div>
