--- a/src/app/heaters/heaters.html
+++ b/src/app/heaters/heaters.html
@@ -7,7 +7,8 @@
                                 data-size="1"
                                 data-title="heater.display"
                                 data-type="'heater'"
-                                data-element="heater">
+                                data-element="heater"
+                                data-icon="'fire'">
 				<data-sag-heater data-element="heater"></data-sag-heater>
 			</data-sag-container>
         </div>
