--- a/src/app/monitors/monitors.html
+++ b/src/app/monitors/monitors.html
@@ -10,7 +10,8 @@
             <data-sag-container data-menu="monitorsCtrl.menu"
                                 data-title="monitor.name"
                                 data-type="'monitor'"
-                                data-element="monitor">
+                                data-element="monitor"
+                                data-icon="'bar-chart'">
 				<data-sag-monitor data-element="monitor"></data-sag-monitor>
 			</data-sag-container>
         </div>
