--- a/src/app/scripts/scripts.html
+++ b/src/app/scripts/scripts.html
@@ -11,7 +11,8 @@
                                 data-size="1"
                                 data-title="script.name"
                                 data-type="'script'"
-                                data-element="script">
+                                data-element="script"
+                                data-icon="'tasks'">
 				<data-sag-script data-element="script"></data-sag-script>
 			</data-sag-container>
         </div>
