--- a/src/app/service/service.html
+++ b/src/app/service/service.html
@@ -14,6 +14,7 @@
 							data-title="element.display || element.name"
 							data-type="element.type"
 							data-element="element"
+							data-icon="serviceCtrl.currentInjector.icon"
 							data-ng-class="{'col-md-2': !serviceCtrl.size || serviceCtrl.size === 1, 'col-md-4': serviceCtrl.size === 2, 'col-md-6': serviceCtrl.size === 3}">
 			<div data-sag-generic-injector data-type="element.type" data-elt="element"></div>
 		</data-sag-container>
