--- a/src/app/switches/switches.html
+++ b/src/app/switches/switches.html
@@ -8,7 +8,8 @@
                                 data-size="1"
                                 data-title="switcher.display"
                                 data-type="'switch'"
-                                data-element="switcher">
+                                data-element="switcher"
+                                data-icon="'toggle-on'">
 				<data-sag-switch data-element="switcher"></data-sag-switch>
 			</data-sag-container>
         </div>
@@ -21,7 +22,8 @@
                                 data-size="1"
                                 data-title="dimmer.display"
                                 data-type="'dimmer'"
-                                data-element="dimmer">
+                                data-element="dimmer"
+                                data-icon="'lightbulb-o'">
                 <data-sag-dimmer data-element="dimmer"></data-sag-dimmer>
             </data-sag-container>
         </div>
