--- a/src/components/container/container.template.html
+++ b/src/components/container/container.template.html
@@ -4,14 +4,14 @@
 			 data-ng-if="(!!$ctrl.menu && !$ctrl.dashboard) || $ctrl.dashboard && $ctrl.sagParams.adminMode" 
 			 data-uib-dropdown>
             <button class="btn btn-primary text-left" type="button" data-uib-dropdown-toggle data-ng-click="">
-				<i data-ng-class="{'fa fa-{{$ctrl.icon}}': !!$ctrl.icon, 'fa fa-bars': !$ctrl.icon}" aria-hidden="true"></i>
+				<i data-ng-class="{'fa fa-{{$ctrl.icon}} fa-fw': !!$ctrl.icon, 'fa fa-bars': !$ctrl.icon}" aria-hidden="true"></i>
             </button>
             <ul data-uib-dropdown-menu>
                 <li data-ng-repeat="menuItem in $ctrl.menu" data-ng-if="menuItem.name !== 'monitor' || $ctrl.element.monitored"><a href="" data-ng-click="$ctrl.menuSelect(menuItem, $ctrl.element)" data-ng-bind="menuItem.display"></a></li>
             </ul>
         </div>
         <div data-ng-if="$ctrl.element.type !== 'script'" class="sag-container-header-title col-xs-10" data-ng-class="{'sag-container-header-title-dashboard': $ctrl.dashboard}">
-            <i data-ng-class="{'fa fa-{{$ctrl.icon}}': !!$ctrl.icon}" aria-hidden="true" data-ng-if="$ctrl.dashboard && !$ctrl.sagParams.adminMode"></i>
+            <i data-ng-class="{'fa fa-{{$ctrl.icon}}': !!$ctrl.icon}" aria-hidden="true" data-ng-if="$ctrl.dashboard"></i>
             <span data-ng-bind="$ctrl.title" class="text-center"></span>
         </div>
     </div>
