--- a/src/app/sensors/sensors.html
+++ b/src/app/sensors/sensors.html
@@ -7,7 +7,8 @@
                                 data-size="1"
                                 data-title="sensor.display"
                                 data-type="'sensor'"
-                                data-element="sensor">
+                                data-element="sensor"
+                                data-icon="'line-chart'">
                 <data-sag-sensor data-element="sensor"></data-sag-sensor>
             </data-sag-container>
         </div>
