Improve dashboard placements

--- a/src/app/dashboard/dashboard.html
+++ b/src/app/dashboard/dashboard.html
@@ -14,7 +14,7 @@
                  data-options="DashboardCtrl.options"
                  data-on-change="DashboardCtrl.onChange(event, items)">
                 <div data-gridstack-item
-                     data-ng-repeat="w in DashboardCtrl.dashboardWidgets"
+                     data-ng-repeat="w in DashboardCtrl.dashboardWidgetsDisplay"
                      class="grid-stack-item"
                      data-gs-no-resize="true"
                      data-gs-item-x="w.x"
