--- a/src/components/modals/edit.modal.html
+++ b/src/components/modals/edit.modal.html
@@ -8,7 +8,7 @@
         </div>
         <div class="row control-group" style="margin: 5px;">
 			<div class="controls">
-				<input type="text" name="editInput" id="editInput" class="form-control" data-ng-model="EditModalCtrl.value">
+				<input type="text" name="editInput" id="editInput" class="form-control" data-ng-model="EditModalCtrl.value" placeholder="{{EditModalCtrl.placeholder}}">
 			</div>
         </div>
     <div class="modal-footer">
