--- a/src/components/script/script.modal.html
+++ b/src/components/script/script.modal.html
@@ -14,7 +14,8 @@
 						class="modal-input-text form-control"
 						size="16" 
 						maxlength="64"
-						data-ng-disabled="!ScriptModalCtrl.add">
+						data-ng-disabled="!ScriptModalCtrl.add"
+						placeholder="{{'script_name_placeholder' | translate}}">
             </div>
         </div>
         <div class="row control-group">
@@ -26,7 +27,8 @@
 						data-ng-model="ScriptModalCtrl.script.description" 
 						class="modal-input-text form-control" 
 						size="16" 
-						maxlength="128">
+						maxlength="128"
+						placeholder="{{'script_description_placeholder' | translate}}">
             </div>
         </div>
         <hr>
