--- a/src/components/heater/heater.modal.html
+++ b/src/components/heater/heater.modal.html
@@ -12,7 +12,7 @@
         <div class="row control-group">
             <span class="col-xs-6" data-translate="heater_update_unit"></span>
             <div class="col-xs-6 controls">
-                <input type="text" name="heaterUnit" id="heaterUnit" data-ng-model="HeatersModalCtrl.heater.options.unit" class="modal-input-text form-control">
+                <input type="text" name="heaterUnit" id="heaterUnit" data-ng-model="HeatersModalCtrl.heater.options.unit" class="modal-input-text form-control" placeholder="{{'heater_unit_placeholder' | translate}}">
             </div>
         </div>
         <div class="row control-group">
