--- a/src/components/sensor/sensor.modal.html
+++ b/src/components/sensor/sensor.modal.html
@@ -12,7 +12,7 @@
         <div class="row control-group">
             <span class="col-xs-6" data-translate="sensor_update_unit"></span>
             <div class="col-xs-6 controls">
-                <input type="text" name="sensorUnit" id="sensorUnit" data-ng-model="SensorsModalCtrl.sensor.options.unit" class="modal-input-text form-control">
+                <input type="text" name="sensorUnit" id="sensorUnit" data-ng-model="SensorsModalCtrl.sensor.options.unit" class="modal-input-text form-control" placeholder="{{'sensor_unit_placeholder' | translate}}">
             </div>
         </div>
         <div class="row control-group">
